force-app/main/default/objects/Follow_up__c/Follow_up__c.object-meta.xml
<CustomObject>
    <label>Follow up</label>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Follow up Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow ups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>