force-app/main/default/objects/Follow_up__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>