force-app/main/default/objects/Follow_up__c/fields/Follow_Up_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Conducted__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Completed&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up Conducted</label>
    <type>Checkbox</type>
</CustomField>