force-app/main/default/objects/Follow_up__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <formula>SLead__r.Is_Primary_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>