force-app/main/default/objects/Follow_up__c/fields/Is_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Is_Secondary__c</fullName>
    <formula>SLead__r.Is_Secondary_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Secondary</label>
    <type>Checkbox</type>
</CustomField>