force-app/main/default/objects/Follow_up__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZLead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Follow ups</relationshipLabel>
    <relationshipName>Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>