force-app/main/default/objects/Follow_up__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <formula>SLead__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadID</label>
    <type>Text</type>
</CustomField>