force-app/main/default/objects/Follow_up__c/fields/Souce__c.field-meta.xml
<CustomField>
    <fullName>Souce__c</fullName>
    <formula>TEXT(SLead__r.Lead_source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Souce</label>
    <type>Text</type>
</CustomField>