force-app/main/default/objects/Follow_up__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    Scheduled_Date__c &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>Scheduled_Date__c</errorDisplayField>
    <errorMessage>Please Select Future Date</errorMessage>
</ValidationRule>