force-app/main/default/objects/Follow_up__c/validationRules/Feedback_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    ISBLANK(Feedback__c)
)</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Enter Feedback</errorMessage>
</ValidationRule>