force-app/main/default/objects/Follow_up__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Feedback__c</columns>
    <columns>Is_Primary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Followup_date_before__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>