force-app/main/default/objects/Follow_up__c/listViews/Tomorrow1.listView-meta.xml
<ListView>
    <fullName>Tomorrow1</fullName>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Tomorrow</label>
</ListView>