force-app/main/default/objects/Follow_up__c/listViews/TotalFollowUpComplited.listView-meta.xml
<ListView>
    <fullName>TotalFollowUpComplited</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Feedback__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Followup_date_before__c</field>
        <operation>equals</operation>
    </filters>
    <label>Total Follow Up Completed</label>
</ListView>