force-app/main/default/objects/Follow_up__c/listViews/Upcoming_Followups.listView-meta.xml
<ListView>
    <fullName>Upcoming_Followups</fullName>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Feedback__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Upcoming Followups</label>
</ListView>